# mcp-demo

./: .gitignore  CLAUDE.md  README.md  demo.sh
backend/: pyproject.toml
backend/app/: access_models.py  auth_models.py  auth_schemas.py  auth_utils.py  config.py  database.py  datamanager_database.py  main.py  models.py  ollama_client.py  schemas.py
backend/app/routers/: access.py  admin.py  auth.py  chat.py  customers.py  orders.py  products.py  query.py  transactions.py
backend/data-dictionary/: customers.json  orders.json  products.json  reviews.json  transactions.json
data-manager/: access_migration.sql  seed_admin.py  tables.sql
db-scripts/: README.md  create_user.sql  grant_retaildb.sql  load_mock_data.py  load_mock_data.sql  retailsdb.sql
db-scripts/mock-data/: customers.csv  orders.csv  products.csv  reviews.csv  transactions.csv
frontend/: App.tsx  package-lock.json  package.json
frontend/src/components/: ChatInput.tsx  DBSchemaPanel.tsx  DataTable.tsx  MessageBubble.tsx  TypingIndicator.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useChat.ts
frontend/src/screens/: AccessScreen.tsx  AdminScreen.tsx  ChatScreen.tsx  LandingScreen.tsx  LoginScreen.tsx  RegisterScreen.tsx  TalkToDataScreen.tsx
frontend/src/services/: api.ts
