[project]
name = "backend-api"
version = "0.1.0"
description = "Retail DB CRUD API"
authors = [
    {name = "dev"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "greenlet (>=3.3.2,<4.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "PyJWT (>=2.8.0,<3.0.0)"
]


[project.scripts]
start = "uvicorn app.main:app --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
